# T.O.S.T.I.-CLI

./: LICENSE  README.md  pyproject.toml  tosti.py
