[tool.poetry]
name = "t-o-s-t-i-cli"
version = "0.1.0"
description = ""
authors = ["Mark Boute <bmark0702@gmail.com>"]
license = "MIT Licence"
readme = "README.md"
packages = [{include = "t"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
